# slugify

./: CMakeLists.txt  README.md  main.cpp
